--- a/src/styles/EntrySheet.css
+++ b/src/styles/EntrySheet.css
@@ -1,3 +1,24 @@
 .entry-sheet {
-    color: red;
+    color: black;
+    background-color: white;
+    box-shadow:
+        .3em .3em .3em darkgray,
+        -.3em .3em .3em darkgray,
+        .3em -.3em .3em darkgray,
+        -.3em -.3em .3em darkgray;
+    border-radius: 1em;
+    width: 100%;
+}
+
+.entry-sheet .sheet-header {
+    background-color: grey;
+    padding: 1em;
+    border-radius: 1em;
+    box-shadow: -0em .5em .5em darkgray;
+    margin-bottom: 1em;
+    width: auto;
+}
+
+.entry-sheet .sheet-header input {
+    font-weight: bold;
 }
